--- a/Client/partials/events.html
+++ b/Client/partials/events.html
@@ -45,8 +45,8 @@
                   <img class="media-object mg-responsive doc-img" src="css/img/place.png" alt="...">
                 </div>
                 <div class="" ng-click="gotoEvent(eventoP.eventId)">
-                  <h4 class="">eventoP.name</h4>
-                  <p class="small">eventoP.description</p>
+                  <h4 class="">{{eventoP.name}}</h4>
+                  <p class="small">{{eventoP.description}}</p>
                 </div>
               </div>
 
