--- a/Client/partials/events.html
+++ b/Client/partials/events.html
@@ -44,7 +44,7 @@
                 <div class="pull-left media-top">
                   <img class="media-object mg-responsive doc-img" src="css/img/place.png" alt="...">
                 </div>
-                <div class="" ng-click="gotoEvent(eventoP.eventId)">
+                <div class="" ng-click="gotoEvent(eventoP.event_id)">
                   <h4 class="">{{eventoP.name}}</h4>
                   <p class="small">{{eventoP.description}}</p>
                 </div>
