--- a/Client/partials/groups.html
+++ b/Client/partials/groups.html
@@ -6,7 +6,7 @@
         <h1>Groups</h1>
 
         <button class="btn" href="javascript:window.location.reload(true)"><span class="glyphicon glyphicon-repeat"></span></button>
-        <button class="btn"><span class="glyphicon glyphicon-plus"></span>Create</button>
+        <button class="btn" ng-click="showhide()"><span class="glyphicon glyphicon-plus"></span>Create</button>
 
       </div>
 
@@ -17,7 +17,7 @@
             <img ng-if="group.group_image == null" class="media-object mg-responsive doc-img" src="css/img/place.png" alt="group.group_id">
             <img ng-if="group.group_image != null" class="media-object mg-responsive doc-img" ng-src="group.group_image" alt="group.group_id">
           </div>
-          <div class="">
+          <div class="" ng-click="view(group.group_id)">
             <h4 class="">{{group.group_name}}</h4>
             <p class="small">{{group.group_description}}</p>
           </div>
@@ -34,10 +34,11 @@
             <div class="row">
 
               <div class="col-xs-4 col-sm-3 text-center">
-                <img src="http://api.randomuser.me/portraits/men/49.jpg" alt="" class="center-block img-circle img-responsive">
+                <img ng-if="gruppo.image == null" src="http://api.randomuser.me/portraits/men/49.jpg" alt="" class="center-block img-circle img-responsive">
+                <img ng-if="gruppo.image != null" ng-src="gruppo.image" alt="" class="center-block img-circle img-responsive">
                 <div ng-show="edit">
                   <p>Upload different photo</p>
-                  <input type="file" class="well well-sm col-sm-12">
+                  <input type="file" base-sixty-four-input class="form-control-file block well well-sm col-sm-12" id="exampleInputFile" ng-model="gruppo.image">
                 </div>
 
                 <div class="row">
@@ -48,53 +49,19 @@
               </div>
 
               <div class="col-xs-8 col-sm-8" style="border-left: solid 1px rgba(123,123,123,0.5);">
-                <button class="btn btn-success pull-right" ng-show="edit" ng-click="saveChanges()">Save</button>
-                <h2>Nome <input type="text" class="form-control" ng-show="edit" aria-label=""></h2>
-                <p><strong>Creation date: </strong> 00-00-0000</p>
-                <p><strong>Description: </strong>Testo della descrizione, bla bla Bootstrap provides 260 glyphicons from the Glyphicons Halflings set. Glyphicons can be used in text, buttons, toolbars, navigation, forms, etc. Here are some ...
-                  Bootstrap provides 260 glyphicons from the Glyphicons Halflings set. Glyphicons can be used in text, buttons, toolbars, navigation, forms, etc. Here are some ...
-                  <textarea class="form-control" ng-show="edit" id="event-description" placeholder="Inserisci testo" rows="4"></textarea> </p>
-                  <p><strong>Admin: </strong> Nome admin</p>
+                <button class="btn btn-success pull-right" ng-show="edit" ng-click="saveChanges(gruppo)">Save</button>
+                <h2>{{gruppo.name}} <input type="text" class="form-control" ng-model="gruppo.name" ng-show="edit" aria-label=""></h2>
+                <p><strong>Creation date: </strong> {{gruppo.creationdate}}</p>
+                <p><strong>Description: </strong> {{gruppo.description}}
+                  <textarea class="form-control" ng-show="edit" id="event-description" ng-model="gruppo.description" placeholder="Inserisci testo" rows="4"></textarea> </p>
+                  <p><strong>Admin: </strong> {{gruppo.admin}}</p>
 
                   <div class="group-members" style="clear:both;">
                     <h3>Membri <button class="btn" ng-show="edit"><span class="glyphicon glyphicon-plus" ></span></button></h3>
                     <div class="group-members-list">
-                      <div class="col-sm-2">
-                        <img class="img-responsive img-circle" src="http://api.randomuser.me/portraits/men/49.jpg">
-                        <h5 class="small">John Smith</h5>
-                      </div>
-                      <div class="col-sm-2">
-                        <img class="img-responsive img-circle" src="http://api.randomuser.me/portraits/men/49.jpg">
-                        <h5 class="small">John Smith</h5>
-                      </div>
-                      <div class="col-sm-2">
-                        <img class="img-responsive img-circle" src="http://api.randomuser.me/portraits/men/49.jpg">
-                        <h5 class="small">John Smith</h5>
-                      </div>
-
-                      <div class="col-sm-2">
-                        <img class="img-responsive img-circle" src="http://api.randomuser.me/portraits/men/49.jpg">
-                        <h5 class="small">John Smith</h5>
-                      </div>
-
-                      <div class="col-sm-2">
-                        <img class="img-responsive img-circle" src="http://api.randomuser.me/portraits/men/49.jpg">
-                        <h5 class="small">John Smith</h5>
-                      </div>
-
-                      <div class="col-sm-2">
-                        <img class="img-responsive img-circle" src="http://api.randomuser.me/portraits/men/49.jpg">
-                        <h5 class="small">John Smith</h5>
-                      </div>
-
-                      <div class="col-sm-2">
-                        <img class="img-responsive img-circle" src="http://api.randomuser.me/portraits/men/49.jpg">
-                        <h5 class="small">John Smith</h5>
-                      </div>
-
-                      <div class="col-sm-2">
-                        <img class="img-responsive img-circle" src="http://api.randomuser.me/portraits/men/49.jpg">
-                        <h5 class="small">John Smith</h5>
+                      <div class="col-sm-2" ng-repeat="p in membri">
+                        <img class="img-responsive img-circle" ng-src="{{p.image_profile}}">
+                        <h5 class="small">{{p.name}} {{p.lastname}}</h5>
                       </div>
                     </div>
                   </div>
@@ -181,9 +148,63 @@
         </div>
 
       </div>
-      <div class="col-md-9 main-content" ng-hide="cane">
-        <img src="gr.jpg" width="100%" height="100%">
-      </div>
 
+      <div class="col-md-9 main-content" ng-hide="cane" style="padding-top:30px;">
+        <div class="row">
+
+          <div class="col-xs-4 col-sm-3 text-center">
+            <img src="http://placehold.it/400x400" alt="" class="center-block img-circle img-responsive">
+            <div>
+              <p>Upload photo</p>
+              <input type="file" base-sixty-four-input class="form-control-file block well well-sm col-sm-12" id="exampleInputFile" ng-model="gruppo.image">
+
+            </div>
+          </div>
+
+          <div class="col-xs-8 col-sm-8" style="border-left: solid 1px rgba(123,123,123,0.5);">
+            <button class="btn btn-success pull-right" ng-show="edit" ng-click="saveGroup()">Save</button>
+            <div class="" style="padding-top:15px;">
+              <form>
+                <fieldset class="form-group">
+                  <label >Nome gruppo</label>
+                  <input type="text" class="form-control" id="" placeholder="Inserisci titolo">
+                </fieldset>
+
+                <fieldset class="form-group">
+                  <label for="group-description">Descrizione</label>
+                  <textarea class="form-control" id="group-description" placeholder="Inserisci testo" rows="4"></textarea>
+                </fieldset>
+
+                <fieldset>
+                  <label >Aggiungi membri</label>
+                  <div>
+                    <div class="input-group">
+                      <input type="text" class="form-control" placeholder="Search for...">
+                      <span class="input-group-btn">
+                        <button class="btn btn-default" type="button">Cerca</button>
+                      </span>
+                    </div>
+                    <div class="search-results">
+
+                    </div>
+
+                    <h4>Persone che hai invitato</h4>
+                    <div class="invited-list">
+                      nessuno
+                    </div>
+                  </div>
+
+                </fieldset>
+
+
+                <div class="">
+                  <button type="submit" ng-click="" class="btn btn-primary">Crea gruppo</button>
+                </div>
+
+              </form>
+            </div>
+          </div>
+        </div>      </div>
+
+      </div>
     </div>
-  </div>
